force-app/main/default/objects/Lead/fields/Country_Alpha2__c.field-meta.xml
<CustomField>
    <fullName>Country_Alpha2__c</fullName>
    <formula>CountryLookup__r.Alpha2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Alpha2</label>
    <type>Text</type>
</CustomField>