force-app/main/default/objects/Lead/fields/Country_Alpha3__c.field-meta.xml
<CustomField>
    <fullName>Country_Alpha3__c</fullName>
    <formula>CountryLookup__r.Alpha3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Alpha3</label>
    <type>Text</type>
</CustomField>