force-app/main/default/objects/Lead/fields/Country_Blocs__c.field-meta.xml
<CustomField>
    <fullName>Country_Blocs__c</fullName>
    <formula>CountryLookup__r.BlocsShort__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Blocs</label>
    <type>Text</type>
</CustomField>