force-app/main/default/objects/Lead/fields/Country_Region__c.field-meta.xml
<CustomField>
    <fullName>Country_Region__c</fullName>
    <formula>CountryLookup__r.Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country Region</label>
    <type>Text</type>
</CustomField>