force-app/main/default/objects/Lead/fields/CountryLookup__c.field-meta.xml
<CustomField>
    <fullName>CountryLookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country Lookup</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>