force-app/main/default/objects/Lead/fields/Owner_Since__c.field-meta.xml
<CustomField>
    <fullName>Owner_Since__c</fullName>
    <description>Fecha/hora en que se asignó el Owner actual.</description>
    <label>Owner Since</label>
    <type>DateTime</type>
</CustomField>